fixing chapter content overlap with nav

--- a/src/common/components/video-players/instructional/instructional-video-player.scss
+++ b/src/common/components/video-players/instructional/instructional-video-player.scss
@@ -69,7 +69,7 @@
   width: 100%;
   height: 100%;
   overflow: hidden;
-  z-index: 10000;
+  //z-index: 10000;
 
   img {
     object-fit: cover;
